server-side up to date

--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,13 @@
   "author": "Joe Turner <jturner@thinkful.com>",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.17.2",
+    "cors": "^2.8.4",
+    "dotenv": "^4.0.0",
     "express": "^4.14.1",
+    "mongoose": "^4.11.6",
+    "morgan": "^1.8.2",
     "nodemon": "^1.11.0"
   }
 }
